nav-bar-animation

--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
         <header>
             <nav>
                 <div class="logo">
-                    <img src="./img/logo.png" alt="logo"/>
-                    <img class="ani" src="./img/astronaut.png" alt="astronaut"/>
+                    <a href="#"><img src="./img/logo.png" alt="logo"/></a>
+                    <!-- <img class="ani" src="./img/astronaut.png" alt="astronaut"/> -->
                 </div>
                 <div class="nav-right">
-                    <a href="#">Home</a>
-                    <a href="#">About</a>
-                    <a href="#">Updates</a>
-                    <a href="#">Career</a>
-                    <a href="#">Shop</a>
-                </div>
-                <div class="search">
-                    <img src="./img/search.png" alt="search"/>
-                         Search
-                </div>
-            </nav>
-            
+                    <div class="nav-links">
+                        <a href="#" class="active">Home</a>
+                        <a href="#">About</a>
+                        <a href="#">Updates</a>
+                        <a href="#">Career</a>
+                        <a href="#">Shop</a>
+                     </div>
+                     <div class="search">
+                        <div>
+                            <img src="./img/search.png" alt="search"/>
+                            <input type="text" placeholder="Search">
+                         </div>
+                     </div>
+                </div>           
+            </nav>   
         </header>
-        <section>
-            <div class="green">
-                hello
+        <section class="astro">
+            <div class="social">
+                <div><a href="#"></a></div>
             </div>
-        <button class="butt" type="button">Click Me!</button>
-        <button class="bu" type="button">Register</button>
-        <button class="tu" type="button">Sign in</button>
         </section>
     </body>
 </html>
