--- a/css/text.html
+++ b/css/text.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <title>
@@ -11,4 +11,4 @@
             qwerty
         </div>
     </body>
-</html>
+</html> -->
