--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title> SpaceX </title>
         <link rel="stylesheet" href="./css/index.css">
         <script src="./js/index.js"></script>
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     </head>
     <body>
         <header>
@@ -32,8 +33,12 @@
         </header>
         <section class="astro">
             <div class="social">
-                <div><a href="#"></a></div>
+                <div><a href="#"><i class="fab fa-facebook-f"></i></a></div>
+                <div><a href="#"><i class="fab fa-tumblr-square"></i></a></div>
+                <div><a href="#"><i class="fab fa-instagram"></i></a></div>
+                <div><a href="#"><i class="fab fa-youtube"></i></a></div>
             </div>
-        </section>
+            <div class="content">
+        </div>
     </body>
 </html>
