--- a/index.html
+++ b/index.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title> SpaceX </title>
-        <link rel="stylesheet" href="./css/index.css">
-        <script src="./js/index.js"></script>
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    </head>
-    <body>
-        <header>
-            <nav>
-                <div class="logo">
-                    <a href="#"><img src="./img/logo.png" alt="logo"/></a>
-                    <!-- <img class="ani" src="./img/astronaut.png" alt="astronaut"/> -->
+
+<head>
+    <meta charset="UTF-8">
+    <title> SpaceX </title>
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./utilities.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <!-- CSS only -->
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
+
+    <!-- JS, Popper.js, and jQuery -->
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script> -->
+
+</head>
+
+<body>
+    <header>
+        <nav>
+            <div class="logo"><a href="#"><img src="./img/logo.png" alt="logo" /></a>
+            </div>
+            <div class="nav-right">
+                <div class="nav-links">
+                    <a href="#" class="active">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Updates</a>
+                    <a href="#">Career</a>
+                    <a href="#">Shop</a>
                 </div>
-                <div class="nav-right">
-                    <div class="nav-links">
-                        <a href="#" class="active">Home</a>
-                        <a href="#">About</a>
-                        <a href="#">Updates</a>
-                        <a href="#">Career</a>
-                        <a href="#">Shop</a>
-                     </div>
-                     <div class="search">
-                        <div>
-                            <img src="./img/search.png" alt="search"/>
-                            <input type="text" placeholder="Search">
-                         </div>
-                     </div>
-                </div>           
-            </nav>   
-        </header>
+                <div class="search">
+                    <div>
+                        <img src="./img/search.png" alt="search" />
+                        <input type="text" placeholder="Search">
+                    </div>
+                </div>
+            </div>
+        </nav>
         <section class="astro">
             <div class="social">
                 <div><a href="#"><i class="fab fa-facebook-f"></i></a></div>
@@ -38,7 +47,91 @@
                 <div><a href="#"><i class="fab fa-instagram"></i></a></div>
                 <div><a href="#"><i class="fab fa-youtube"></i></a></div>
             </div>
-            <div class="content">
+            <div class="content container">
+                <div class="left-section">
+                    <h1>Space Exploration Technologies Corp. trading as SpaceX, is a private American aerospace
+                        manufacturer headquartered California.</h1>
+                    <button class="btn btn-main">Explore Space</button>
+                </div>
+                <div class="right-section">
+                    <img class="ani" src="./img/astronaut.png" alt="astronaut" />
+                </div>
+            </div>
+        </section>
+    </header>
+    <section class="strip">
+        <h3>Starlink Mission</h3>
+        <button class="btn btn-main">Join Now</button>
+    </section>
+    <section class="rocket container">
+        <div class="left-block">
+            <div class="block">
+                <h1 class="withunderline">FALCON9</h1>
+                <p>Falcon 9 is a two-stage rocket designed and manufactured by SpaceX
+                    for the reliable and safe transport of satellites and the Dragon spacecraft into orbit
+                </p>
+            </div>
+            <div class="block1">
+                <h1 class="withunderline">DRAGON SPACECRAFT</h1>
+                <p>Dragon carries cargo in the spacecraft's pressurized capsule and unpressurized trunk,
+                    which can also accomodate secondary payloads. In the future, Dragon will carry astronauts
+                    in the pressurized capsule as well.
+                </p>
+            </div>
+            <div class="learn">
+                <button class="btn1 btn1-main">LEARN MORE</button>
+            </div>
         </div>
-    </body>
+        <div class="rocket-block">
+            <img src="./img/rocket1.png" alt="rocket1">
+            <img src="./img/rocket2.png" alt="rocket2">
+            <img src="./img/rocket3.png" alt="rocket3">
+        </div>
+        <div class="right-block">
+            <div class="block payload">
+                <h2>PAYLOAD</h2>
+                <p>Falcon 9 delivers payloads to space aboard the
+                    Dragon spacecraft or inside a composite fairing.
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footerlogo">
+            <div><img src="./img/logo.png" alt="footerlogo" /></div>
+            <div>
+                <span>&copy 2020 rituldesign</span>
+            </div>
+        </div>
+        <div class="aboutus">
+            <h2>About Us</h2>
+            <ul>
+                <li><a href="#">WHO WE ARE</a></li>
+                <li><a href="#">CONTACT US</a></li>
+                <li><a href="#">FAQS</a></li>
+                <li><a href="#">MISSIONS</a></li>
+                <li><a href="#">OTHER COMPANIES</a></li>
+            </ul>
+        </div>
+        <div class="company">
+            <h2>Company</h2>
+            <ul>
+                <li><a href="#">CAREERS</a></li>
+                <li><a href="#">LEGAL</a></li>
+                <li><a href="#">POLICY</a></li>
+                <li><a href="#">PRESS</a></li>
+                <li><a href="#">BLOG</a></li>
+            </ul>
+        </div>
+        <div class="socials">
+            <h2>Socials</h2>
+            <div><a href="#"><i class="fab fa-facebook-f"></i></a></div>
+            <div><a href="#"><i class="fab fa-tumblr-square"></i></a></div>
+            <div><a href="#"><i class="fab fa-instagram"></i></a></div>
+            <div><a href="#"><i class="fab fa-youtube"></i></a></div>
+        </div>
+    </footer>
+    <script src="./js/index.js"></script>
+</body>
+
 </html>
